[28285] Umstellung auf Virtual Filesystem und Globalen Pfad (#529)